--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
 					<li><a href="/login">Login</a></li>
 					<li><a href="/register">Register</a></li>
 				<% } else { %>
-					<li><a href="#">Signed In As <%= currentUser.username %></a></li>
+					<li><a href="/user/<%= currentUser._id %>">Signed In As <%= currentUser.username %></a></li>
 					<li><a href="/logout">Logout</a></li>
 				<% } %>		
 			</ul>
