--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -38,7 +38,7 @@
                 <button class="btn btm-primary">Submit</button>
             </div>
         </form>
-        <a href="/campgrounds">Go Back</a>
+        <a href="/places">Go Back</a>
       </div>
     </div>
   </div>
