--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,22 +1,18 @@
 <%- include ("../partials/header") %>
 
-<div class="container">
-	
-	<div class="row">
-		<h1 style="text-align: center;">Edit</h1>
-		<div style="width: 30%; margin: 25px auto;">
-			<form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
-				<div class="form-group">
-				  <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
-				</div>
-				<div class="form-group">
-					<button class="btn btn-lg btn-primary btn-block">Submit!</button>
-				</div>
-			</form>
-      		<a href="/campgrounds/<%= campground_id %>">Go Back!</a>
-		</div>
+<div class="container mw-50 py-4 px-5">
+	<h1 class="text-center">Edit comment</h1>
+	<div>
+		<form action="/places/<%= content_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
+			<div class="form-group">
+				<textarea class="form-control" type="text" name="comment[text]" value="<%= comment.text %>" rows="6"></textarea>
+			</div>
+			<div class="form-group">
+				<button class="btn btn-lg btn-outline-info btn-block">Submit!</button>
+			</div>
+		</form>
+		  <a href="/places/<%= content_id %>"><i class="fas fa-angle-double-left"></i> Go Back</a>
 	</div>
-
 </div>
 	
 <%- include ("../partials/footer") %>
