--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,22 +1,18 @@
 <%- include ("../partials/header") %>
 
-<div class="container">
-	
-	<div class="row">
-		<h1 style="text-align: center;">Create a New Comment</h1>
-		<div style="width: 30%; margin: 25px auto;">
-			<form action="/campgrounds/<%= campground._id %>/comments/" method="POST">
+<div class="container-fluid py-4 px-5">
+		<h1>Create a New Comment</h1>
+		<div>
+			<form action="/places/<%= content._id %>/comments/" method="POST">
 				<div class="form-group">
-				  <input class="form-control" type="text" name="comment[text]" placeholder="Comment">
+				  <textarea class="form-control" type="text" name="comment[text]" placeholder="Comment" rows="6"></textarea>
 				</div>
 				<div class="form-group">
 				<button class="btn btn-lg btn-primary btn-block">Submit!</button>
 				</div>
 			</form>
-      		<a href="/campgrounds/<%= campground._id %>">Go Back!</a>
+			  <a href="/places/<%= content._id %>"><i class="fas fa-angle-double-left"></i> Go Back!</a>
 		</div>
-	</div>
-
 </div>
 	
 <%- include ("../partials/footer") %>
