--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,6 @@
 <%- include ("./partials/header") %>
 
-<div class="container">
-  <div class="row">
+<div class="container-fluid py-4 px-5">
     <h1 style="text-align: center;">Login</h1>
     <div style="width: 30%; margin: 25px auto;">
       <form action="/login" method="POST">
@@ -10,12 +9,20 @@
         </div>
         <div class="form-group">
           <input class="form-control" type="password" name="password" placeholder="password">
-        </div>  
-        <button class="btn btn-lg btm-primary btn-block">Login!</button>
+        </div>
+        <div class="form-group">
+          <input class="custom-control-input" type="checkbox" id="autoSizingCheck">
+          <label class="form-check-label" for="autoSizingCheck">Remember me</label>
+          <a href="#">Forgot password?</a>
+        </div>
+        <button class="btn btn-lg btn-outline-info btn-block">Login!</button>
+        <div class="form-group">
+          <a><i class="fab fa-facebook-square"></i></a>
+          <a><i class="fab fa-google-plus-square"></i></a>
+        </div>
       </form>
-      <a href="/campgrounds">Go Back</a>
+      <a href="/places"><i class="fa fa-angle-double-left"></i> Go Back</a>
     </div>
-  </div>
 </div>
 
 <%- include ("./partials/footer") %>
