--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="/stylesheets/main.css">
-		<title>YelpCamp</title>
+		<link  rel="stylesheet" href="/stylesheets/hover.css">
+		<title>Toraberu</title>
 	</head>
-	<body>
-		<nav class="navbar navbar-default">
+	<body class="pt-5">
+		<nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #e9ecef;">
 		<div class="container-fluid">
 		  <div class="navbar-header">
-			<a class="navbar-brand" href="/">YelpCamp</a>
+			<a class="navbar-brand" href="/places"><i class="fas fa-map-marked-alt"></i> Toraberu</a>
 		  </div>
-		  <div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav navbar-right">
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav ml-auto">
 				<% if(!currentUser){ %>
-					<li><a href="/login">Login</a></li>
-					<li><a href="/register">Register</a></li>
+					<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+					<li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
 				<% } else { %>
-					<li><a href="/user/<%= currentUser._id %>">Signed In As <%= currentUser.username %></a></li>
-					<li><a href="/logout">Logout</a></li>
+					<li class="nav-item"><a class="nav-link" href="/user/<%= currentUser._id %>">Signed In As <strong><%= currentUser.username %></strong></a></li>
+					<li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
 				<% } %>		
 			</ul>
 		 </div>
