--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,6 @@
 <%- include ("./partials/header") %>
 
-<div class="container">
-  <div class="row">
+<div class="container-fluid py-4 px-5">
     <h1 style="text-align: center;">Register</h1>
     <div style="width: 30%; margin: 25px auto;">
       <form action="/register" method="POST">
@@ -10,12 +9,11 @@
         </div>
         <div class="form-group">
           <input class="form-control" type="password" name="password" placeholder="password">
-        </div>  
-        <button class="btn btn-lg btm-primary btn-block">Sign Up!</button>
+        </div>
+        <button class="btn btn-lg btn-outline-info btn-block">Sign Up!</button>
       </form>
-      <a href="/campgrounds">Go Back</a>
+      <a href="/places"><i class="fa fa-angle-double-left"></i> Go Back</a>
     </div>
-  </div>
 </div>
 
 
