--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -36,7 +36,7 @@
           </div>
         </form>
         <a class="btn btn-warning" href="/user/<%= currentUser._id %>/edit">Edit</a>
-        <a href="/campgrounds">Go Back</a>
+        <a href="/places">Go Back</a>
       </div>
     </div>
   </div>
