--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -23,14 +23,12 @@
     <title>YelpCamp</title>
   </head>
   <body>
-    <div id="landing-header">
-      <h1>Welcome to Toraberu!</h1>
-      <a href="/places" class="hvr-pulse btn btn-lg btn-info"
-        >View all places to Travel</a
-      >
-      <span class="white"></span>
-    </div>
-    <ul class="slideshow white">
+      <div id="landing-header">
+        <h1>Welcome to Toraberu!</h1>
+        <br>
+        <a href="/places" class="hvr-pulse btn btn-lg btn-info">View all places to Travel</a>
+      </div>
+    <ul class="slideshow">
       <li><span></span></li>
       <li><span></span></li>
       <li><span></span></li>
