--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,11 +1,11 @@
 <%- include ("../partials/header") %>
 
 <div class="container mw-50 py-4 px-5">
-	<h1 class="text-center">Edit comment</h1>
+	<h1 class="text-center">Edit <%= content.name %> comment</h1>
 	<div>
 		<form action="/places/<%= content_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
 			<div class="form-group">
-				<textarea class="form-control" type="text" name="comment[text]" value="<%= comment.text %>" rows="6"></textarea>
+				<textarea class="form-control" type="text" name="comment[text]" rows="6"><%= comment.text %></textarea>
 			</div>
 			<div class="form-group">
 				<button class="btn btn-lg btn-outline-info btn-block">Submit!</button>
