--- a/views/content/new.ejs
+++ b/views/content/new.ejs
@@ -1,17 +1,26 @@
 <%- include ("../partials/header") %>
 
 <div class="container-fluid pt-4 px-5">
-  <h1 style="text-align: center;">Create a New Campground</h1>
+  <h1 style="text-align: center;">Create a New Place</h1>
   <div style="width: 30%; margin: 25px auto;">
     <form action="/places" method="POST">
       <div class="form-group">
         <input class="form-control" type="text" name="content[name]" placeholder="Campground name"/>
       </div>
       <div class="form-group">
-        <input class="form-control" type="text" name="content[image]" placeholder="image url"/>
+        <input class="form-control" type="text" name="content[location]" placeholder="Location"/>
       </div>
       <div class="form-group">
-        <textarea class="form-control" type="text" name="content[description]" placeholder="description" rows="6"></textarea>
+        <input class="form-control" type="text" name="content[image]" placeholder="Main image url"/>
+      </div>
+      <div class="form-group">
+        <input class="form-control" type="text" name="content[image]" placeholder="Additional image url (optional)"/>
+      </div>
+      <div class="form-group">
+        <input class="form-control" type="text" name="content[image]" placeholder="Additional image url (optional)"/>
+      </div>
+      <div class="form-group">
+        <textarea class="form-control" type="text" name="content[description]" placeholder="Place description" rows="6"></textarea>
       </div>
       <div class="form-group">
         <button class="btn btn-lg btn-outline-info btn-block">Submit</button>
