--- a/views/content/show.ejs
+++ b/views/content/show.ejs
@@ -69,10 +69,10 @@
                         </div>
                     <% }); %>
                     <div class="mb-1">
-                        <hr class="mb-0">
+                        <hr class="mb-1">
                         <a class="btn btn-info btn-sm <% if (currentUser && content.reviews.some(function (review) {return review.author.id.equals(currentUser._id)})) { %> disabled <% } %>" href="/places/<%= content._id %>/reviews/new">
                             Write a New Review</a>
-                        <p><a href="/places/<%= content._id %>/reviews"><i class="fas fa-search" aria-hidden="true"></i> See all reviews</a></p>
+                        <p class="delete-form"><a href="/places/<%= content._id %>/reviews"><i class="fas fa-search" aria-hidden="true"></i> See all reviews</a></p>
                     </div>
                     <% }; %>
                 </div>
@@ -95,9 +95,9 @@
                         </div>
                     </div>
                     <div class="mb-1">
-                        <hr class="mb-0">
+                        <hr class="mb-1">
                         <a class="btn btn-info btn-sm" href="/places/<%= content._id %>/comments/new">Add new comment</a>
-                        <p><a href="/places/<%= content._id %>/comments"><i class="fas fa-search" aria-hidden="true"></i> See all comments</a></p>
+                        <p class="delete-form"><a href="/places/<%= content._id %>/comments"><i class="fas fa-search" aria-hidden="true"></i> See all comments</a></p>
                     </div>
                     <% }) %>
                 </div>
@@ -105,36 +105,33 @@
         </div>
         <div class="col-md-5">
             <div id="demo" class="carousel slide" data-ride="carousel">
-
                 <!-- Indicators -->
                 <ul class="carousel-indicators">
                   <li data-target="#demo" data-slide-to="0" class="active"></li>
                   <li data-target="#demo" data-slide-to="1"></li>
                   <li data-target="#demo" data-slide-to="2"></li>
-                </ul>
-                
+                </ul>                
                 <!-- The slideshow -->
-                <div class="carousel-inner">
+                <div class="carousel-inner rounded">
                   <div class="carousel-item active">
-                    <img src="<%= content.image %>" alt="Chicago" width="1100" height="500">
+                    <img src="<%= content.image %>">
                   </div>
                   <div class="carousel-item">
-                    <img src="<%= content.image %>" alt="Chicago" width="1100" height="500">
+                    <img src="<%= content.image %>">
                   </div>
                   <div class="carousel-item">
-                    <img src="<%= content.image %>" alt="Chicago" width="1100" height="500">
+                    <img src="<%= content.image %>">
                   </div>
                 </div>
-                
                 <!-- Left and right controls -->
                 <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                  <span class="carousel-control-prev-icon"></span>
+                    <i class="fas fa-angle-left fa-2x"></i>
                 </a>
                 <a class="carousel-control-next" href="#demo" data-slide="next">
-                  <span class="carousel-control-next-icon"></span>
+                    <i class="fas fa-angle-right fa-2x"></i>
                 </a>
               </div>
-        </div>
+            </div>
     </div>
     <br>
 </div>
