a lot of fixes (#2)
* Added in package.json script start line

* MondoDB atlas

* More Atlas changes

* Fix MongoDB connection

* Remove port in start

* Chaged bootstrap from 3 to 4

* Edit landing page

* Add ability for more than one picture in content

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -60,6 +60,11 @@ a:hover {
 .checked {
   color: #17a2b8;
 }
+/*FORMS*/
+.maid-container {
+  margin: 0 40vh;
+}
+
 /*PICTURE CAROUSEL*/
 .carousel-inner img {
   width: 100%;
