--- a/views/content/content.ejs
+++ b/views/content/content.ejs
@@ -11,7 +11,7 @@
         <% content.forEach(function(content){ %>
         <div class="col-md-3 col-sm-6 mt-4">
             <div class="card" style="align-items: center;">
-                <img class="card-img-top cards-images rounded" src="<%= content.image %>">
+                <img class="card-img-top cards-images rounded" src="<%= content.images[0] %>">
                 <div class="card-body p-1">
                     <h4 class="card-title text-left px-2 pt-2"><%= content.name %></h4>
                     <p class="px-2 card-text text-left text-secondary"><%= content.description.substring(0, 150) %>...</p>
@@ -37,7 +37,6 @@
         </div>
         <% }); %>
     </div>
-</div>
-	
+</div>	
 
 <%- include ("../partials/footer") %>
