--- a/views/content/show.ejs
+++ b/views/content/show.ejs
@@ -3,6 +3,7 @@
 <div class="container-fluid pt-4 px-5">
     <!-- <a class="btn btn-info" href="/places">Go Back</a> -->
     <div class="show-head d-flex justify-content-between align-self-center rounded">
+        <%= console.log(content.images) %>
         <h2><%= content.name %> / Kaunas, Lithuania</h2>
             <% if (content.rating === 0) { %>
                 <h5><em>No reviews yet.</em></h5>
@@ -68,13 +69,13 @@
                             </div>
                         </div>
                     <% }); %>
+                    <% }; %>
                     <div class="mb-1">
                         <hr class="mb-1">
                         <a class="btn btn-info btn-sm <% if (currentUser && content.reviews.some(function (review) {return review.author.id.equals(currentUser._id)})) { %> disabled <% } %>" href="/places/<%= content._id %>/reviews/new">
                             Write a New Review</a>
                         <p class="delete-form"><a href="/places/<%= content._id %>/reviews"><i class="fas fa-search" aria-hidden="true"></i> See all reviews</a></p>
                     </div>
-                    <% }; %>
                 </div>
                 <!-- THIRD NAV - COMMENTS -->
                 <div id="comments" class="container tab-pane fade"><br>
@@ -94,12 +95,12 @@
                             <% }; %>
                         </div>
                     </div>
+                    <% }) %>
                     <div class="mb-1">
                         <hr class="mb-1">
                         <a class="btn btn-info btn-sm" href="/places/<%= content._id %>/comments/new">Add new comment</a>
                         <p class="delete-form"><a href="/places/<%= content._id %>/comments"><i class="fas fa-search" aria-hidden="true"></i> See all comments</a></p>
                     </div>
-                    <% }) %>
                 </div>
             </div>
         </div>
@@ -107,21 +108,17 @@
             <div id="demo" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ul class="carousel-indicators">
-                  <li data-target="#demo" data-slide-to="0" class="active"></li>
-                  <li data-target="#demo" data-slide-to="1"></li>
-                  <li data-target="#demo" data-slide-to="2"></li>
+                <% content.images.forEach(function(image, index){ %>
+                  <li data-target="#demo" data-slide-to="<%= index %>" class="<%= index === 0 ? 'active' : '' %>"></li>
+                <% }); %>
                 </ul>                
                 <!-- The slideshow -->
                 <div class="carousel-inner rounded">
-                  <div class="carousel-item active">
-                    <img src="<%= content.image %>">
+                <% content.images.forEach(function(image, index){ %>
+                  <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
+                    <img src="<%= image %>">
                   </div>
-                  <div class="carousel-item">
-                    <img src="<%= content.image %>">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="<%= content.image %>">
-                  </div>
+                <% }); %>
                 </div>
                 <!-- Left and right controls -->
                 <a class="carousel-control-prev" href="#demo" data-slide="prev">
