--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,44 +1,48 @@
 <%- include ("../partials/header") %>
 
-<div class="container">
-    <div class="row">
-      <h1 style="text-align: center;"><%= currentUser.username %> profile page</h1>
-        <form class="form-horizontal" action="/register" method="POST">
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Username:</label>
-            <div class="col-sm-10">
-                <input class="form-control" type="text" name="currentUser[username]" value="<%= currentUser.username %>" readonly>
-            </div>
+<div class="container-fluid pt-4 px-5">
+  <div class="maid-container">
+      <h1 class="text-center"><%= currentUser.username %> profile page</h1>
+      <br>
+      <form action="/register" method="POST">
+        <div class="form-group row">
+          <label class="col-sm-2 control-label">Username:</label>
+          <div class="col-sm-10">
+              <input class="form-control" type="text" name="currentUser[username]" value="<%= currentUser.username %>" readonly>
           </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Email adress:</label>
-            <div class="col-sm-10">
-                <input class="form-control" type="email" name="currentUser[email]" value="<%= currentUser.email %>" readonly>
-            </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-2 control-label">Email adress:</label>
+          <div class="col-sm-10">
+              <input class="form-control" type="email" name="currentUser[email]" value="<%= currentUser.email %>" readonly>
           </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">First Name:</label>
-            <div class="col-sm-10">
-                <input class="form-control" type="text" name="currentUser[firstName]" value="<%= currentUser.firstName %>" readonly>
-            </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-2 control-label">First Name:</label>
+          <div class="col-sm-10">
+              <input class="form-control" type="text" name="currentUser[firstName]" value="<%= currentUser.firstName %>" readonly>
           </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Last Name:</label>
-            <div class="col-sm-10">
-                <input class="form-control" type="text" name="currentUser[lastName]" value="<%= currentUser.lastName %>" readonly>
-            </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-2 control-label">Last Name:</label>
+          <div class="col-sm-10">
+              <input class="form-control" type="text" name="currentUser[lastName]" value="<%= currentUser.lastName %>" readonly>
           </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Avatar:</label>
-            <div class="col-sm-10">
-                <input class="form-control" type="text" name="currentUser[avatar]" value="<%= currentUser.avatar%>" readonly>
-            </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-2 control-label">Avatar:</label>
+          <div class="col-sm-10">
+              <input class="form-control" type="text" name="currentUser[avatar]" value="<%= currentUser.avatar%>" readonly>
           </div>
-        </form>
-        <a class="btn btn-warning" href="/user/<%= currentUser._id %>/edit">Edit</a>
-        <a href="/places">Go Back</a>
-      </div>
+        </div>
+        <div class="form-group col-sm-12">
+          <a class="btn btn-info" href="/user/<%= currentUser._id %>/edit">Edit</a>
+        </div>
+      </form>
+      <a class="btn btn-info" href="/user/<%= currentUser._id %>/edit">Edit</a>
+      <a href="/places"><i class="fa fa-angle-double-left"></i> Go Back</a>
     </div>
   </div>
+</div>
 
 <%- include ("../partials/footer") %>
