--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="/stylesheets/main.css">
 		<link  rel="stylesheet" href="/stylesheets/hover.css">
+		<link rel = "icon" href = "https://2kckmk1oabwe2e7tgb35crjv-wpengine.netdna-ssl.com/wp-content/uploads/2017/02/travel-icon-png-25.jpg.png" type = "image/x-icon"> 
 		<title>Toraberu</title>
 	</head>
 	<body class="pt-5">
