--- a/views/content/edit.ejs
+++ b/views/content/edit.ejs
@@ -1,8 +1,8 @@
 <%- include ("../partials/header") %>
 
 <div class="container-fluid pt-4 px-5">
-		<h1 style="text-align: center;">Edit <%= content.name %> place</h1>
-		<div style="width: 30%; margin: 25px auto;">
+		<h1 class="text-center">Edit "<%= content.name %>" place</h1>
+		<div class="maid-container">
 			<form action="/places/<%= content._id %>?_method=PUT" method="POST">
 				<div class="form-group">
 					<input class="form-control" type="text" name="content[name]" value="<%= content.name %>">
@@ -11,13 +11,7 @@
 					<input class="form-control" type="text" name="content[location]" value="<%= content.location %>">
 				</div>
 				<div class="form-group">
-					<input class="form-control" type="text" name="content[image]" value="<%= content.image %>">
-				</div>
-				<div class="form-group">
-					<input class="form-control" type="text" name="content[image]" value="<%= content.image %>">
-				</div>
-				<div class="form-group">
-					<input class="form-control" type="text" name="content[image]" value="<%= content.image %>">
+					<input class="form-control" type="text" name="images[]" value="<%= content.image %>">
 				</div>
 				<div class="form-group">
 					<textarea class="form-control" type="text" name="content[description]" rows="6"><%= content.description %></textarea>
@@ -26,7 +20,7 @@
 					<button class="btn btn-lg btn-outline-info btn-block">Submit</button>
 				</div>
 			</form>
-			<a href="/places"><i class="fa fa-angle-double-left"></i> Go Back</a>
+			<a href="/places/"><i class="fa fa-angle-double-left"></i> Go Back</a>
 		</div>
 </div>
 	
