--- a/views/content/new.ejs
+++ b/views/content/new.ejs
@@ -1,8 +1,8 @@
 <%- include ("../partials/header") %>
 
 <div class="container-fluid pt-4 px-5">
-  <h1 style="text-align: center;">Create a New Place</h1>
-  <div style="width: 30%; margin: 25px auto;">
+  <h1 class="text-center">Create a New Place</h1>
+  <div class="maid-container">
     <form action="/places" method="POST">
       <div class="form-group">
         <input class="form-control" type="text" name="content[name]" placeholder="Campground name" required/>
