--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,14 +1,21 @@
 <%- include ("./partials/header") %>
 
 <div class="container-fluid py-4 px-5">
-    <h1 style="text-align: center;">Register</h1>
-    <div style="width: 30%; margin: 25px auto;">
+    <h1 class="text-center">Register</h1>
+    <div class="maid-container">
       <form action="/register" method="POST">
         <div class="form-group">
-          <input class="form-control" type="text" name="username" placeholder="username">
+          <input class="form-control" type="text" name="username" placeholder="Iron Man" required>
         </div>
         <div class="form-group">
-          <input class="form-control" type="password" name="password" placeholder="password">
+          <input class="form-control" type="email" name="email" placeholder="not.fake@gmail.com" required>
+        </div>
+        <div class="form-group">
+          <input class="form-control" aria-describedby="passwordHelpBlock" type="password" name="password" placeholder="password123" required>
+          <small id="passwordHelpBlock" class="form-text text-muted">Must be 8-20 character long and don't forget numbers. "pasword123 not suitable"</small>
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="password" name="password" placeholder="password123 (one more time)" required>
         </div>
         <button class="btn btn-lg btn-outline-info btn-block">Sign Up!</button>
       </form>
