--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,44 +1,61 @@
 <%- include ("../partials/header") %>
 
-<div class="container">
-    <div class="row">
-      <h1 style="text-align: center;">Edit <%= currentUser.username %> profile page</h1>
-        <form class="form-horizontal" action="/user/<%= currentUser._id %>/?_method=PUT" method="POST">
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Username:</label>
-                <div class="col-sm-10">
+<div class="container-fluid pt-4 px-5">
+    <div class="maid-container">
+      <h1 class="text-center">Edit <%= currentUser.username %> profile page</h1>
+      <br>
+        <form action="/user/<%= currentUser._id %>/?_method=PUT" method="POST">
+            <div class="form-group row">
+                <label class="col-sm-3 control-label">Username:</label>
+                <div class="col-sm-9">
                     <input class="form-control" type="text" name="currentUser[username]" value="<%= currentUser.username %>" readonly>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Email adress:</label>
-                <div class="col-sm-10">
-                    <input class="form-control" type="email" name="currentUser[email]" value="<%= currentUser.email %>">
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-3 control-label">Email adress:</label>
+                <div class="col-sm-9">
+                    <input class="form-control" type="email" name="currentUser[email]" value="<%= currentUser.email %>" readonly>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">First Name:</label>
-                <div class="col-sm-10">
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-3 control-label">First Name:</label>
+                <div class="col-sm-9">
                     <input class="form-control" type="text" name="currentUser[firstName]" value="<%= currentUser.firstName %>">
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Last Name:</label>
-                <div class="col-sm-10">
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-3 control-label">Last Name:</label>
+                <div class="col-sm-9">
                     <input class="form-control" type="text" name="currentUser[lastName]" value="<%= currentUser.lastName %>">
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Avatar:</label>
-                <div class="col-sm-10">
-                    <input class="form-control" type="text" name="currentUser[avatar]" value="<%= currentUser.avatar %>">
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-3 control-label">Avatar img url:</label>
+                <div class="col-sm-9">
+                    <input class="form-control" type="text" name="currentUser[avatar]" value="<%= currentUser.avatar%>">
                 </div>
-            </div>
-            <div class="form-group">
-                <button class="btn btm-primary">Submit</button>
-            </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-3 control-label">OR</label>
+                <div class="col-sm-9">
+                    <input class="form-control-file" type="file" name="currentUser[avatar]">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-3 control-label">More about You:</label>
+                <div class="col-sm-9">
+                    <textarea class="form-control" type="text" name="currentUser[description]" rows="6"><%= currentUser.description%></textarea>
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-sm-3">
+                  <a href="/places"><i class="fa fa-angle-double-left"></i> Go Back</a>
+                </div>
+                <div class="col-sm-9">
+                  <a class="btn btn-info form-control" href="/user/<%= currentUser._id %>/edit">Submit!</a>
+                </div>
+              </div>
         </form>
-        <a href="/places">Go Back</a>
       </div>
     </div>
   </div>
