Added header title name and icon

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,14 +8,14 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="/stylesheets/main.css">
 		<link  rel="stylesheet" href="/stylesheets/hover.css">
-		<link rel = "icon" href = "https://2kckmk1oabwe2e7tgb35crjv-wpengine.netdna-ssl.com/wp-content/uploads/2017/02/travel-icon-png-25.jpg.png" type = "image/x-icon"> 
+		<link rel = "icon" href = "/img/1.png" type = "image/x-icon"> 
 		<title>Toraberu</title>
 	</head>
 	<body class="pt-5">
 		<nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #e9ecef;">
 		<div class="container-fluid">
 		  <div class="navbar-header">
-			<a class="navbar-brand" href="/places"><i class="fas fa-map-marked-alt"></i> Toraberu</a>
+			<a class="navbar-brand text-info" href="/places"><i class="fas fa-map-marked-alt fa-lg"></i> Toraberu</a>
 		  </div>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
