--- a/views/content/content.ejs
+++ b/views/content/content.ejs
@@ -14,7 +14,7 @@
                 <img class="card-img-top cards-images rounded" src="<%= content.images[0] %>">
                 <div class="card-body p-1">
                     <h4 class="card-title text-left px-2 pt-2"><%= content.name %></h4>
-                    <p class="px-2 card-text text-left text-secondary"><%= content.description.substring(0, 150) %>...</p>
+                    <p class="card-text text-left text-secondary"><%= content.description.substring(0, 150) %>...</p>
                     <hr class="my-1">
                     <div class="row">
                         <div class="col-lg-6 col-md-12">
