--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
 					<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
 					<li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
 				<% } else { %>
-					<li class="nav-item"><a class="nav-link" href="/user/<%= currentUser._id %>">Signed In As <strong><%= currentUser.username %></strong></a></li>
+					<li class="nav-item"><a class="nav-link" href="/user/<%= currentUser._id %>">Signed In As <strong><%= currentUser.displayName %></strong></a></li>
 					<li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
 				<% } %>		
 			</ul>
