--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -2,19 +2,19 @@
 
 <div class="container-fluid pt-4 px-5">
     <div class="maid-container">
-      <h1 class="text-center">Edit <%= currentUser.username %> profile page</h1>
+      <h1 class="text-center">Edit <em><%= currentUser.displayName %></em> profile page</h1>
       <br>
         <form action="/user/<%= currentUser._id %>/?_method=PUT" method="POST">
             <div class="form-group row">
                 <label class="col-sm-3 control-label">Username:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="text" name="currentUser[username]" value="<%= currentUser.username %>" readonly>
+                    <input class="form-control" type="text" name="currentUser[displayName]" value="<%= currentUser.displayName %>" readonly>
                 </div>
               </div>
               <div class="form-group row">
                 <label class="col-sm-3 control-label">Email adress:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" type="email" name="currentUser[email]" value="<%= currentUser.email %>" readonly>
+                    <input class="form-control" type="email" name="currentUser[username]" value="<%= currentUser.username %>" readonly>
                 </div>
               </div>
               <div class="form-group row">
@@ -29,7 +29,7 @@
                     <input class="form-control" type="text" name="currentUser[lastName]" value="<%= currentUser.lastName %>">
                 </div>
               </div>
-              <div class="form-group row">
+              <!-- <div class="form-group row">
                 <label class="col-sm-3 control-label">Avatar img url:</label>
                 <div class="col-sm-9">
                     <input class="form-control" type="text" name="currentUser[avatar]" value="<%= currentUser.avatar%>">
@@ -40,7 +40,7 @@
                 <div class="col-sm-9">
                     <input class="form-control-file" type="file" name="currentUser[avatar]">
                 </div>
-              </div>
+              </div> -->
               <div class="form-group row">
                 <label class="col-sm-3 control-label">More about You:</label>
                 <div class="col-sm-9">
@@ -52,7 +52,7 @@
                   <a href="/places"><i class="fa fa-angle-double-left"></i> Go Back</a>
                 </div>
                 <div class="col-sm-9">
-                  <a class="btn btn-info form-control" href="/user/<%= currentUser._id %>/edit">Submit!</a>
+                  <button class="btn btn-info form-control">Submit!</button>
                 </div>
               </div>
         </form>
