--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -2,19 +2,19 @@
 
 <div class="container-fluid pt-4 px-5">
   <div class="maid-container">
-      <h1 class="text-center"><%= currentUser.username %> profile page</h1>
+      <h1 class="text-center"><em><%= currentUser.displayName %></em> profile page</h1>
       <br>
       <form action="/register" method="POST">
         <div class="form-group row">
           <label class="col-sm-3 control-label">Username:</label>
           <div class="col-sm-9">
-              <input class="form-control" type="text" name="currentUser[username]" value="<%= currentUser.username %>" readonly>
+              <input class="form-control" type="text" name="currentUser[displayName]" value="<%= currentUser.displayName %>" readonly>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-3 control-label">Email adress:</label>
           <div class="col-sm-9">
-              <input class="form-control" type="email" name="currentUser[email]" value="<%= currentUser.email %>" readonly>
+              <input class="form-control" type="email" name="currentUser[username]" value="<%= currentUser.username %>" readonly>
           </div>
         </div>
         <div class="form-group row">
@@ -29,12 +29,12 @@
               <input class="form-control" type="text" name="currentUser[lastName]" value="<%= currentUser.lastName %>" readonly>
           </div>
         </div>
-        <div class="form-group row">
+        <!-- <div class="form-group row">
           <label class="col-sm-3 control-label">Avatar:</label>
           <div class="col-sm-9">
               <input class="form-control" type="text" name="currentUser[avatar]" value="<%= currentUser.avatar%>" readonly>
           </div>
-        </div>
+        </div> -->
         <div class="form-group row">
           <label class="col-sm-3 control-label">More about You:</label>
           <div class="col-sm-9">
